name:                fizzbuzz
version:             0.4.0
synopsis:            An implementation of FizzBuzz
description:         An implementation of FizzBuzz in Haskell.
homepage:            https://github.com/frankhjung/fizzbuzz#readme
license:             GPL-3
license-file:        LICENSE
author:              Frank H Jung
maintainer:          frankhjung@linux.com
copyright:           Copyright © 2019-2020 Frank H Jung
category:            education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fizzbuzz
  hs-source-dirs:    app
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base
                   , fizzbuzz

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  exposed-modules:   FizzBuzz
  build-depends:     base

test-suite test
  hs-source-dirs:    test
  default-language:  Haskell2010
  main-is:           Test.hs
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , hspec
                   , QuickCheck
                   , fizzbuzz
