cabal-version:        1.12

name:                 fizzbuzz
version:              0.5.0
description:          An implementation of FizzBuzz in Haskell
synopsis:             FizzBuzz
homepage:             https://github.com/frankhjung/haskell-fizzbuzz#readme
bug-reports:          https://github.com/frankhjung/haskell-fizzbuzz/issues
author:               Frank H Jung
maintainer:           frankhjung@linux.com
copyright:            Copyright © 2019-2022 Frank H Jung
license:              GPL-3
license-file:         LICENSE
category:             education
build-type:           Simple
extra-source-files:   README.md

source-repository     head
  type:               git
  location:           https://github.com/frankhjung/haskell-fizzbuzz

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  exposed-modules:    FizzBuzz
  build-depends:      base >= 4 && < 5

test-suite            test
  hs-source-dirs:     test
                    , src
  default-language:   Haskell2010
  main-is:            Test.hs
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall
  other-modules:      FizzBuzz
  build-depends:      base
                    , hspec >= 2.7 && < 2.8
                    , QuickCheck >= 2.13 && < 2.15

executable            fizzbuzz
  hs-source-dirs:     app
                    , src
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -Wall
  other-modules:      FizzBuzz
  build-depends:      base
